src/objects/appsolutely__Business_Dossier__c.object
<CustomObject>
    <description>Information on a business establishment including information related to finance and structure.</description>
    <fields>
        <fullName>appsolutely__Assets__c</fullName>
        <description>The amount of assets for the financial year DutchBusinessMoneyV2</description>
        <label>Assets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Authorized_Share_Capital_Currency__c</fullName>
        <label>Currency For Authorized Share Capital</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Authorized_Share_Capital__c</fullName>
        <description>Number indicating the amount of authorized share capital.  The amount of money for which the company is allowed to give out shares.  Dutch: `maatschappelijk kapitaal`.</description>
        <label>Authorized Share Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Business_Positions_Updated_Date__c</fullName>
        <description>The date that the business positions were updated in Salesforce.</description>
        <label>Business Positions Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appsolutely__Chamber_Code__c</fullName>
        <label>Chamber of Commerce office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>appsolutely__chamber_number</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Chamber_Number__c</fullName>
        <description>The chamber number is the number of the Chamber of Commerce office which manages this dossier.
00  Onbekend
01	Noord Nederland
08	Oost Nederland
09	Centraal Gelderland
14	Limburg
17	Brabant
20	Zuid West Nederland
24	Rotterdam
27	Den Haag
30	Midden Nederland
32	Gooi-, Eem- en Flevoland
34	Amsterdam
37	Noordwest-Holland</description>
        <label>Chamber Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Chamber_of_Commerce_Extract_Fetched_Date__c</fullName>
        <description>Store the date at which latest Chamber of Commerce Extract was fetched from Company.Info</description>
        <label>Chamber of Commerce Extract Fetched Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appsolutely__City__c</fullName>
        <description>The city the organisation resides in according to CreditSafe</description>
        <inlineHelpText>The city the organisation resides in according to CreditSafe</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Class_Personnel_CI__c</fullName>
        <label>Number of Employees (by CI)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>appsolutely__Class_Personnel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Class_Personnel_Fulltime__c</fullName>
        <label>Number of Fulltime Employees (Range)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>appsolutely__Class_Personnel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Class_Personnel__c</fullName>
        <description>A classification of the total number of employees (full-time and part-time).  Possible values:
1	no employees
2	1 employee
3	2 to 4 employees
4	5 to 9 employees
5	10 to 19 employees
6	20 to 49 employees
7	50 to 99 employees
8	100 to 199 employees
9	199 to 499 employees
10	500 to 749 employees
11	750 to 999 employees
12	1000 or more employees</description>
        <label>Number Of Employees (Range)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>appsolutely__Class_Personnel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Id__c</fullName>
        <description>Creditsafe company identifier used to retrieve a report.</description>
        <label>Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Type_Code__c</fullName>
        <description>The code of this company type</description>
        <label>Company Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Type_End_Date__c</fullName>
        <description>The end date of this company type</description>
        <label>Company Type End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Type_Label__c</fullName>
        <description>The name / title of this company type.</description>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Type_Start_Date__c</fullName>
        <description>The start date of this company type</description>
        <label>Company Type Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Contact_Gender__c</fullName>
        <label>Contact Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>m</fullName>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>f</fullName>
                    <label>Female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Contact_Initials__c</fullName>
        <description>Initials of the contact</description>
        <label>Contact Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Contact_Prefix__c</fullName>
        <description>Name prefix of the contact.</description>
        <label>Contact Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Contact_Surname__c</fullName>
        <description>Surname of the contact.</description>
        <label>Contact Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Contact_Title1__c</fullName>
        <description>Title of the contact person of this business.</description>
        <label>Contact First Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Contact_Title2__c</fullName>
        <description>Second title of the contact person of this business.</description>
        <label>Contact Second Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Continuation_Date__c</fullName>
        <description>The continuation date of the company, if applicable. This is usually the date that the company changed legal form.</description>
        <label>Continuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Correspondence_City__c</fullName>
        <label>Correspondence City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Correspondence_Country__c</fullName>
        <label>Correspondence Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Correspondence_House_Number_Addition__c</fullName>
        <label>Correspondence House Number Addition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Correspondence_House_Number__c</fullName>
        <label>Correspondence House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Correspondence_Postal_Code__c</fullName>
        <label>Correspondence Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Correspondence_Street__c</fullName>
        <label>Correspondence Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Correspondence_Street_and_House_Number__c</fullName>
        <description>Combines street, house number and addition into one for on the page layout.</description>
        <formula>appsolutely__Correspondence_Street__c + &apos; &apos; +  appsolutely__Correspondence_House_Number__c + &apos; &apos; +  appsolutely__Correspondence_House_Number_Addition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correspondence Street and House Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Country__c</fullName>
        <description>The country this company is situated in according to CreditSafe</description>
        <inlineHelpText>The country this company is situated in according to CreditSafe</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Business Dossiers</relationshipLabel>
        <relationshipName>Business_Dossiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Id__c</fullName>
        <description>The unique credit safe Id. Only filled for records retrieved through Credit Safe.</description>
        <externalId>true</externalId>
        <label>Creditsafe Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_of_Last_Account__c</fullName>
        <label>Date of Last Account</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_of_Last_Change__c</fullName>
        <label>Date of Last Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appsolutely__Deeplink_URL__c</fullName>
        <formula>IF(  ISPICKVAL( appsolutely__Registration_Country__c , &apos;NL&apos;), 
     $CustomMetadata.01I1l0000001Biv.m0l1l0000004CQ5.00N1l000001aLxw  + &apos;id/&apos; +
     appsolutely__Dossier_Number__c + &apos;/&apos;, 
     &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deeplink URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Discontinuation_Date__c</fullName>
        <description>The date when the business was discontinued (Dutch: datum wanneer de activiteiten gestaakt zijn)</description>
        <label>Discontinuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Domain_Name__c</fullName>
        <description>The internet domain name registered by the business</description>
        <label>Domain Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>appsolutely__Dossier_Number__c</fullName>
        <description>The Chamber of Commerce number, consisting of 8 numbers (e.g., 00123456).  This number is unique and will not change as long as the organisation exists.  Subsidiaries (‘Nevenvestigingen’) of the organisation are registered using the same dossier number.</description>
        <externalId>true</externalId>
        <inlineHelpText>The registration number under which the organisation is registered in the company&apos;s country. For the Netherlands the Chamber of Commerce Number.</inlineHelpText>
        <label>Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Enrich__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the business dossier has been enriched. False otherwise (default). (not to display on layout because it has no value to users)</description>
        <label>Enrich</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_City__c</fullName>
        <label>Establishment City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Country__c</fullName>
        <label>Establishment Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Date_Day__c</fullName>
        <description>Day of the establishment date</description>
        <label>Establishment Date Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Date_Month__c</fullName>
        <description>Month of Establishment Date</description>
        <label>Establishment Date Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Date_Year__c</fullName>
        <description>Year of Establishment Date</description>
        <label>Establishment Date Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Date__c</fullName>
        <description>The date the establishment started its activities.  This date does not change when the establishment moves to another location.</description>
        <label>Establishment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_House_Number_Addition__c</fullName>
        <label>Establishment House Number Addition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_House_Number__c</fullName>
        <label>Establishment House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Number__c</fullName>
        <description>The unique identifier for this business establishment, consisting of 12 numbers (e.g.  012345678912).  Optional.  Some businesses, mainly foundations (`Stichting`), do not have establishments.  In these instances the establishment_number is not returned.</description>
        <externalId>true</externalId>
        <label>Establishment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Postal_Code__c</fullName>
        <label>Establishment Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Street__c</fullName>
        <label>Establishment Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Establishment_Street_and_House_Number__c</fullName>
        <description>Combines street, house number and addition into one string for on the page layout.</description>
        <formula>appsolutely__Establishment_Street__c + &apos; &apos; + appsolutely__Establishment_House_Number__c  +  &apos; &apos; + appsolutely__Establishment_House_Number_Addition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Establishment Street and House Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Founding_Date_Day__c</fullName>
        <description>Day of Founding Date</description>
        <label>Founding Date Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Founding_Date_Month__c</fullName>
        <description>Month of Founding Date</description>
        <label>Founding Date Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Founding_Date_Year__c</fullName>
        <description>Year of Founding Date</description>
        <label>Founding Date Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Founding_Date__c</fullName>
        <description>Indicates the founding date of the company</description>
        <label>Founding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Full_Address__c</fullName>
        <description>The full address the organisation currently resides according to CreditSafe</description>
        <inlineHelpText>The full address the organisation currently resides according to CreditSafe</inlineHelpText>
        <label>Full Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number__c</fullName>
        <description>The house number of the address the organisation resides according to CreditSafe</description>
        <inlineHelpText>The house number of the address the organisation resides according to CreditSafe</inlineHelpText>
        <label>House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if the business is currently registered as bankrupt (Dutch: ‘Faillissement’).</description>
        <label>Bankrupt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Dip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if the business is currently registered as Debtor-in-Possession (Dutch: ‘in Surseance’).</description>
        <label>Debtor in possession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Economically_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if the business is economically active. This indication is determined by a formula developed by the ‘Vereninging Kamers van Koophandel’. This should not be interpreted as an indication of whether the business is currently still registered at the Chamber of Commerce: only currently registered businesses are available through our services.</description>
        <label>Economically Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication of whether the company does export.  Optional.</description>
        <label>Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication of whether the company does import.  Optional.</description>
        <label>Imports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Main_Establishment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if this is the main establishment of the business.</description>
        <label>Main Establishment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Non_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if the business has specified that the ‘Vereniging Kamers van Koophandel’ and the ‘de kamers van koophandel’ may not supply the business’ information to third parties for direct marketing purposes.</description>
        <label>Non Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Indication_Organisation_Code__c</fullName>
        <description>Possible values:
O	Business (Dutch: ‘Onderneming)
V	Association (Dutch: ‘Vereniging’)
S	Non-profit organisation (Dutch: ‘Stichting’)
K	Church community (Dutch: ‘Kerkgenootschap’)
&lt;empty&gt;	Unknown</description>
        <label>Organisation Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>V</fullName>
                    <label>Association</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Non-profit organisation</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>Church community</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>Business</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Insolvencies__c</fullName>
        <description>Array of DutchBusinessInsolvency entries containing data about the insolvencies.  [optional]</description>
        <label>Insolvencies</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Is_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if removed from Company.info server</description>
        <label>Is Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Issued_Share_Capital_Currency__c</fullName>
        <label>Currency For Issued Share Capital</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Issued_Share_Capital__c</fullName>
        <label>Issued Share Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Form_Code__c</fullName>
        <description>The code of the Belgian Juridical Form of this company. Every juridical form code has its own label (see field Juridical Form)</description>
        <inlineHelpText>The code of the Belgian Juridical Form of this company. Every juridical form code has its own label (see field Juridical Form)</inlineHelpText>
        <label>Juridical Form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Form_End_Date__c</fullName>
        <description>The end date of the juridical form of the company.</description>
        <label>Juridical Form End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Form_Label__c</fullName>
        <description>The Belgian Juridical Forms, based on the Form Codes (see field Juridical Form Code).</description>
        <inlineHelpText>The Belgian Juridical Forms, based on the Form Codes (see field Juridical Form Code).</inlineHelpText>
        <label>Juridical Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Form_Start_Date__c</fullName>
        <description>The start date of the juridical form of the company.</description>
        <label>Juridical Form Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Situation_Code__c</fullName>
        <description>The official code of the  juridical situation of the company.</description>
        <inlineHelpText>The official code of the  juridical situation of the company.</inlineHelpText>
        <label>Juridical Situation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Situation_End_Date__c</fullName>
        <description>The official end date of the juridical situation of the company.</description>
        <label>Juridical Situation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Situation_Label__c</fullName>
        <description>The official name / title of the  juridical situation of the company.</description>
        <inlineHelpText>The official name / title of the  juridical situation of the company.</inlineHelpText>
        <label>Juridical Situation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Juridical_Situation_Start_Date__c</fullName>
        <description>The official start date of the juridical situation of the company.</description>
        <label>Juridical Situation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Legal_Form_Code__c</fullName>
        <description>Registered legal form used by the organisation.
See Legal_Form_Text for text description.</description>
        <label>Legal Form Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Legal_Form_Text__c</fullName>
        <description>Description of the legal form (in Dutch).</description>
        <label>Legal Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eenmanszaak</fullName>
                </value>
                <value>
                    <fullName>Eenmanszaak met meer dan één eigenaar</fullName>
                </value>
                <value>
                    <fullName>NV / BV in oprichting op A-formulier</fullName>
                </value>
                <value>
                    <fullName>Rederij</fullName>
                </value>
                <value>
                    <fullName>Maatschap</fullName>
                </value>
                <value>
                    <fullName>Vennootschap onder firma</fullName>
                </value>
                <value>
                    <fullName>NV / BV in oprichting op B-formulier</fullName>
                </value>
                <value>
                    <fullName>Commanditaire Vennootschap met één beherende vennoot</fullName>
                </value>
                <value>
                    <fullName>Commanditaire Vennootschap met meer dan één beherende vennoot</fullName>
                </value>
                <value>
                    <fullName>NV / BV in oprichting op D-formulier</fullName>
                </value>
                <value>
                    <fullName>Rechtspersoon in oprichting</fullName>
                </value>
                <value>
                    <fullName>Besloten Vennootschap met gewone structuur</fullName>
                </value>
                <value>
                    <fullName>Besloten Vennootschap blijkens statuten structuurvennootschap</fullName>
                </value>
                <value>
                    <fullName>Naamloze Vennootschap met gewone structuur</fullName>
                </value>
                <value>
                    <fullName>Naamloze Vennootschap blijkens statuten structuurvennootschap</fullName>
                </value>
                <value>
                    <fullName>Naamloze Vennootschap beleggingsmaatschappij met veranderlijk kapitaal</fullName>
                </value>
                <value>
                    <fullName>NV beleggingsmaatschappij met veranderlijk kapitaal blijkens statuten structuurvennootschap</fullName>
                </value>
                <value>
                    <fullName>Europese naamloze vennootschap (SE)</fullName>
                </value>
                <value>
                    <fullName>Europese naamloze vennootschap (SE) blijkens statuten structuurvennootschap</fullName>
                </value>
                <value>
                    <fullName>Coöperatie U.A. met gewone structuur</fullName>
                </value>
                <value>
                    <fullName>Coöperatie U.A. blijkens statuten structuurcoöperatie</fullName>
                </value>
                <value>
                    <fullName>Coöperatie W.A. met gewone structuur</fullName>
                </value>
                <value>
                    <fullName>Coöperatie W.A. blijkens statuten structuurcoöperatie</fullName>
                </value>
                <value>
                    <fullName>Coöperatie B.A. met gewone structuur</fullName>
                </value>
                <value>
                    <fullName>Coöperatie B.A. blijkens statuten structuurcoöperatie</fullName>
                </value>
                <value>
                    <fullName>Vereniging van Eigenaars</fullName>
                </value>
                <value>
                    <fullName>Vereniging met volledige rechtsbevoegdheid</fullName>
                </value>
                <value>
                    <fullName>Vereniging met beperkte rechtsbevoegdheid</fullName>
                </value>
                <value>
                    <fullName>Kerkgenootschap</fullName>
                </value>
                <value>
                    <fullName>Stichting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Main_Establishment_Number__c</fullName>
        <description>The establishment number for the main establishment of the business.  Optional.</description>
        <label>Main Establishment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>appsolutely__No_VAT_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal field which returns true if there is no VAT number found in the CI backend for Dutch dossiers. For non-Dutch dossiers, Dutch dossiers for which the VAT number has not been checked yet and Dutch dossiers with a VAT number this should return false.</description>
        <label>No VAT Number Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Number_Of_Subsidiaries__c</fullName>
        <description>The number of subsidiaries this organization controls.</description>
        <label>Number Of Subsidiaries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Number_of_Establishments__c</fullName>
        <description>The number of establishments the company has.</description>
        <inlineHelpText>The number of establishments the company has.</inlineHelpText>
        <label>Number of Establishments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Number_of_Representatives_Organizations__c</fullName>
        <description>The number of organizations acting as a legal representative for the company.</description>
        <inlineHelpText>The number of organizations acting as a legal representative for the company.</inlineHelpText>
        <label>Number of Representatives (Organization)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Number_of_Representatives_Persons__c</fullName>
        <description>The number of persons acting as a legal representative for the company.</description>
        <inlineHelpText>The number of persons acting as a legal representative for the company.</inlineHelpText>
        <label>Number of Representatives (Person)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Office_Type__c</fullName>
        <label>Office Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Paid_Up_Share_Capital_Currency__c</fullName>
        <label>Currency For Paid Up Share Capital</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Paid_Up_Share_Capital__c</fullName>
        <label>Paid Up Share Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Parent_Chamber_Of_Commerce_Number__c</fullName>
        <description>The Chamber of Commerce number of the immediate parent organization.</description>
        <label>Parent Chamber Of Commerce Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Personnel_CI_Reference_Date__c</fullName>
        <description>A DutchBusinessDateV3.  The reference date (peildatum) of the number of employees recorded by company.info</description>
        <label>Date Number Of Employees (by CI)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Personnel_CI__c</fullName>
        <description>The total number of employees as recorded by the company.info software</description>
        <label>Number Of Employees (by CI)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Personnel_Fulltime__c</fullName>
        <label>Number of Fulltime Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Personnel_Reference_Date__c</fullName>
        <description>The reference date (peildatum) of the number of employees.</description>
        <label>Date Number Of Employees</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Personnel__c</fullName>
        <label>Number Of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>